Spacing fix when feature is hidden

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -33,7 +33,12 @@
     }
     
     .template-header {
+        margin-bottom: 0;
         padding-bottom: 26px;
+    }
+
+    .bk-tpl-hidden + .template-header {
+        margin-bottom: 0;
     }
     
     
